--- a/T1/send-return.html
+++ b/T1/send-return.html
@@ -315,6 +315,7 @@ Send us your tax return</h1>
   </dd>
 </dl>
 
+<dl class="dl-horizontal mrgn-tp-lg">
 <h2>By mail</h2>
   <p>If you complete and file your taxes on a paper return, it may take longer for the CRA to process your return.</p>
 <h3>To send a paper return by mail</h3>
@@ -326,7 +327,9 @@ Send us your tax return</h1>
 <h4>If you are mailing someone else’s paper return</h4>
 <p>If you prepare other people’s tax returns, mail each person’s return in a separate envelope. However, if you are filing more than one return for the same person, put them all in one envelope.</p>
 </div>
+</dl>
 
+<dl class="dl-horizontal mrgn-tp-lg">
 <h2>With another free service</h2>
   <p>If you have a modest income and a simple tax situation, you may be eligible for help at a free tax clinic or receive an invitation to use the SimpleFile service.</p>
 
@@ -350,7 +353,8 @@ Send us your tax return</h1>
       </ul>
     <p>For details: <a href="https://www.canada.ca/en/revenue-agency/services/e-services/about-auto-fill-return.html">Auto-fill my return</a></p>
     </dd> 
-  
+</dl>
+	
 </div>
 
     
