--- a/T1/send-return.html
+++ b/T1/send-return.html
@@ -317,7 +317,13 @@ Send us your tax return</h1>
 
 <dl class="dl-horizontal mrgn-tp-lg">
 <h2>By mail</h2>
-  <p>If you complete and file your taxes on a paper return, it may take longer for the CRA to process your return.</p>
+<p>If you complete and file your taxes on a paper return, it may take longer for the CRA to process your return.</p>
+  <dl class="dl-horizontal mrgn-tp-lg">
+    <dt>Complete your tax return and forms by hand</dt>
+	<dd>add info</dd>
+    <dt>Print your return from a tax sofyware</dt>
+	  <dd>add info</dd>
+  </dl>
 <h3>To send a paper return by mail</h3>
 <ol>
 <li>Complete your taxes on a paper return</li>
@@ -327,7 +333,7 @@ Send us your tax return</h1>
 <h4>If you are mailing someone else’s paper return</h4>
 <p>If you prepare other people’s tax returns, mail each person’s return in a separate envelope. However, if you are filing more than one return for the same person, put them all in one envelope.</p>
 </div>
-</dl>
+
 
 
 <h2>With another free service</h2>
