--- a/T1/taxrates.html
+++ b/T1/taxrates.html
@@ -138,10 +138,14 @@
       <h2 class="h3">On this page</h2>
       <ul>
         <li><a href="#toc0">How rates and brackets work</a></li>
-        <li><a href="#toc1a">2024 rates and brackets</a></li>
+        <li><a href="#toc1a">2024 income tax rates and brackets</a>
+	    <ul>
+       		<li><a href="#toc1a-1">Federal rates</a></li>
+        	<li><a href="#toc1a-2">Provincial or territorial rates</a></li>
+      	     </ul></li>        
         <li><a href="#toc1-2">Previous years rates and brackets</a></li>
-        <li><a href="#toc3">Understanding your tax amount</a></li>
-	             <li><a href="#toc4">Reducing your tax amount</a></li>
+        <li><a href="#toc3">Reducing your final tax amount</a></li>
+	             
       </ul>
     </nav>
     <!--script type="text/javascript">
