--- a/T1/taxrates.html
+++ b/T1/taxrates.html
@@ -125,7 +125,7 @@
 </div>
 <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement" class="container">
   <div class="mwstitle section">
-    <h1 property="name" id="wb-cont" dir="ltr">Tax rates and income brackets for individuals</h1>
+    <h1 property="name" id="wb-cont" dir="ltr">Income tax rates and income brackets for individuals</h1>
   </div>
  
 <div class="mwsgeneric-base-html parbase section">
@@ -133,10 +133,13 @@
   </div>
   <div class="mwsbodytext text parbase section">
     <p>Canadian federal, provincial, and territorial tax rates and income brackets for current and previous tax years.</p>
+    <p>Tax rates are generally stable, for example the federal rates are the same since 2016. However, the income tax brackets are increasing every year based on inflation. Certain other personal income tax and benefit amounts are also adjusted based on inflation.</p>
+    <p>For more information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/adjustment-personal-income-tax-benefit-amounts.html">Indexation adjustment amounts</a></p>
 
+</script--></div>
 <details>
  <summary>How rates and brackets work</summary>
-	</script--></div>
+	
   <div class="mwsbodytext text parbase section">
   
   <div class="row">
@@ -171,10 +174,9 @@
       </div>
     </div>
   </div>
-  <h3>Adjustments to income brackets</h3>
-  <p>Each year, income bracket thresholds increase based on inflation. Certain other personal income tax and benefit amounts are also adjusted based on inflation.</p>
-  <p>For more information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/adjustment-personal-income-tax-benefit-amounts.html">Indexation adjustment amounts</a></p>
-  </details>
+  </details>	  
+ 
+ 
   
 	
   
