--- a/T1/taxrates.html
+++ b/T1/taxrates.html
@@ -133,8 +133,7 @@
   </div>
   <div class="mwsbodytext text parbase section">
     <p>Canadian federal, provincial, and territorial tax rates and income brackets for current and previous tax years.</p>
-    <p>Tax rates are generally stable, for example the federal rates are the same since 2016. However, the income tax brackets are increasing every year based on inflation. Certain other personal income tax and benefit amounts are also adjusted based on inflation.</p>
-    <p>For more information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/adjustment-personal-income-tax-benefit-amounts.html">Indexation adjustment amounts</a></p>
+    
 
 </script--></div>
 <details>
@@ -173,7 +172,12 @@
         <p>Refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/educational-programs/completing-basic-return.html">Introduction to a basic income tax and benefit return</a></p>
       </div>
     </div>
+	<h3> Tax brackets are changing every year </h3>
+	 <p>What is changing every year are the income tax brackets are increasing every year based on inflation. Certain other personal income tax and benefit amounts are also adjusted based on inflation.</p>
+   	 <p>The tax rates are generally stable and we are using the same feredral rates since the 2016 tax year.</p> 
+	 <p>For more information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/adjustment-personal-income-tax-benefit-amounts.html">Indexation adjustment amounts</a></p>
   </div>
+	  
   </details>	  
  
  
@@ -281,7 +285,7 @@
         </tr>
     </tbody>
 </table>
-    <li>
+   
     <h3 id="#toc1a-2"> Provincial or territorial income tax rates for 2024</h3>
     
       <p>Each province and territory determines their own income tax rates.</p>
