--- a/T1/taxrates.html
+++ b/T1/taxrates.html
@@ -137,7 +137,7 @@
 
 </script--></div>
 <details>
- <summary>How rates and brackets work</summary>
+ <summary><strong>How rates and brackets work</strong></summary>
 	
   <div class="mwsbodytext text parbase section">
   
@@ -234,8 +234,8 @@
  
   <h2 id="toc1a">2024 income tax rates and brackets</h2>
         <p>These rates apply to your taxable income, after various deductions and exemptions have been applied.</p>
-        <p>Provincial or territorial income tax rates apply in addition to federal income tax rates.</p>
         <p>When you file your tax return, you are reducing your total tax payable with income tax deducted at source, instalments paid during the year, and with various tax credits, deductions and benefits available to you.</p>
+	<p>Provincial or territorial income tax rates apply in addition to federal income tax rates.</p>
   <h3 id="#toc1a-1">Federal tax rates for 2024</h3>
      
     </table></div>
