--- a/digital-by-default/Online-mail-for-business.html
+++ b/digital-by-default/Online-mail-for-business.html
@@ -305,8 +305,8 @@
 <h2 id="hlp2">How to prepare for this change </h2>
   <h3>Accessing My Business Account </h3>
     <p>To prepare for the change to online mail, the CRA recommends signing in to your My Business Account to ensure you have access to all your business numbers and the ability to view your business correspondence.</p>
-    <p>If you are not registered for My Business Account and would like to take advantage of the benefits of the CRA’s digital services, go to My Business Account.</p>
-    <p>For more information on the CRA’s digital services, go to Digital services.</p>
+    <p>If you are not registered for My Business Account and would like to take advantage of the benefits of the CRA’s digital services, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account</a></p>
+    <p>For more information on the CRA’s digital services, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services.html">Digital services</a>.</p>
 
   <h3>Email notifications </h3>
     <p><strong>Make sure your email address is in your account and is up-to-date.</strong></p>
@@ -315,7 +315,7 @@
   <p>To confirm or change your email address or to register to receive email notifications from the CRA complete the following steps:</p>
 
 
-  <p>For more information see Email notifications from the CRA – Businesses</p>
+  <p>For details: <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/online-mail-reduce-your-cost-doing-business-saving-time-online.html">Email notifications from the CRA – Businesses</a> </p>
               
 <h2 id="hlp3">Exceptions</h2>
   <h3>Existing businesses not registered for My Business Account</h3>
