--- a/digital-by-default/Online-mail-for-business.html
+++ b/digital-by-default/Online-mail-for-business.html
@@ -299,7 +299,15 @@
 
 <h2 id="hlp1">Business correspondence</h2>
 <p>Business correspondence refers to notices, letters, forms, statements, and other documents that are sent by the CRA to communicate important information about your business tax account or returns. </p>
-<p>With the change to online mail, your business correspondence will be considered as received on the date that it is posted  to your My Business Account. You will need to sign in to My Business Account to access, view, print, or download your business correspondence.  Follow the steps below to access your business correspondence:</p>
+<p>With the change to online mail, your business correspondence will be considered as received on the date that it is posted  to your My Business Account. You will need to sign in to My Business Account to access, view, print, or download your business correspondence.</p>
+
+<h3>Where to view your mail online</h3>		    
+<p> Follow the steps below to access your business correspondence:</p>
+	 <ol class=" lst-spcd">
+   		<li>Sign in to My Business Account. If you are an authorized representative, sign in to Represent a Client </li>
+    		<li>From the navigation menu on the left, select "Mail" found under Correspondence</li>
+    		<li>Select and review your mail</li>
+	</ol>
 
 
 <h2 id="hlp2">How to prepare for this change </h2>
@@ -314,6 +322,13 @@
 
   <p>To confirm or change your email address or to register to receive email notifications from the CRA complete the following steps:</p>
 
+	<ol class=" lst-spcd">
+   		<li>Sign in to My Business Account. If you are an authorized representative, sign in to Represent a Client </li>
+    		<li>From the navigation menu on the left, select "Profile"</li>
+    		<li>In the "Notification preferences" section, select "Manage notification preferences"</li>
+		<li>Review accounts registered to receive email notification and the email address attached to accounts for accuracy</li>
+		<li>Select the applicable change option available on the page and complete the steps</li>
+ 	</ol>
 
   <p>For details: <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/online-mail-reduce-your-cost-doing-business-saving-time-online.html">Email notifications from the CRA – Businesses</a> </p>
               
@@ -326,7 +341,7 @@
               
   <h3>Non-resident businesses</h3>
     <p>Non-resident businesses that <strong>do not</strong> have access to My Business Account through their representative or an owner that is a Canadian resident will not be transitioned to online mail and will continue to receive their correspondence by paper mail.</p>
-    <p>If the representative or the owner of a non-redisent business <strong>has access</strong> to My Business Account, the default method of delivering <strong>will transition</strong> to online mail.  </p>
+    <p>If the representative or the owner of a non-redisent business <strong>has access</strong> to My Business Account, the default delivery method <strong>will transition</strong> to online mail.  </p>
 
 <h2 id="hlp4">Requesting paper mail</h2>
 <p>If you would like to receive your business correspondence by paper mail, you’ll need to make a request to activate paper mail. </p>
