--- a/digital-by-default/Online-mail-for-business.html
+++ b/digital-by-default/Online-mail-for-business.html
@@ -273,6 +273,15 @@
 
 <p>Starting spring 2025, the Canada Revenue Agency (CRA) will transition to online mail as the default method of delivering most business correspondence. This means you’ll start receiving most of your business notices and other correspondence through CRA’s secure online portal, My Business Account, instead of in the mail.</p>
 
+<h2 class="h3">On this page</h2>
+
+<ul>
+    <li><a href="#hlp1">Business correspondence</a> </li>
+    <li><a href="#hlp2">How to prepare for this change</a> </li>
+    <li><a href="#hlp3">Exceptions</a> </li>
+    <li><a href="#hlp4">Requesting paper mail</a> </li>
+</ul>		    
+		    
 <p>This change applies to <strong>all</strong> the following:</p>
   <ul>
   <li>New business number and CRA program account registrations</li>
