--- a/T1/taxrates.html
+++ b/T1/taxrates.html
@@ -1084,27 +1084,29 @@
           <summary class="max-content text-centre">Transcript</summary>
           <div data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/educational-programs/videos/learn-about-taxes-rates.html#transcript-content"></div>
         </details>
-        <h3><span class="fas fa-book mrgn-rght-sm"></span>Resource: Learn about your taxes</h3>
+
+	<h3><span class="fas fa-book mrgn-rght-sm"></span>Resource: Learn about your taxes</h3>
         <p>Learn how your tax rate and income bracket relate to the taxes you may owe at the end of the tax year.</p>
         <p>Refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/educational-programs/completing-basic-return.html">Introduction to a basic income tax and benefit return</a></p>
       </div>
     </div>
-	<h3> Tax brackets are changing every year </h3>
+	
+	  <h3> Tax brackets are changing every year </h3>
 	 <p>What is changing every year are the income tax brackets are increasing every year based on inflation. Certain other personal income tax and benefit amounts are also adjusted based on inflation.</p>
    	 <p>The tax rates are generally stable and we are using the same feredral rates since the 2016 tax year.</p> 
 	 <p>For more information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/adjustment-personal-income-tax-benefit-amounts.html">Indexation adjustment amounts</a></p>
-  </div>
-	  
+   </div>
+	 
  
 	
-<h3>Understanding your tax amount</h3>
-	 <p>The taxes you owe are calculated using your <a class="wb-lbx" role="button" aria-controls="X" href="#X">taxable<span class="nowrap"> income<span class="mrgn-lft-sm far fa-question-circle"></span></span></a>.</p>
+	<h3>Understanding your tax amount</h3>
+	<p>The taxes you owe are calculated using your <a class="wb-lbx" role="button" aria-controls="X" href="#X">taxable<span class="nowrap"> income<span class="mrgn-lft-sm far fa-question-circle"></span></span></a>.</p>
 	<p>Federal and provincial or territorial taxes (<a class="wb-lbx" role="button" aria-controls="Y" href="#Y">except<span class="nowrap"> Quebec<span class="mrgn-lft-sm far fa-question-circle"></span></span></a>) are calculated the same way. They apply <strong>in addition to</strong> each other.</p>
 	
  <details>
-    <summary>Example 1: <span class="fas fa-map-marker-alt text-muted mrgn-rght-sm"></span>Calculation for <strong>2024 provincial tax</strong> on taxable income in the <strong>first bracket</strong></summary>
-  <p><strong>Example:</strong></p>
-	<p>Giovanni's taxable income was $45,000. He was living in British Columbia on December 31, 2024.</p>	
+    <summary>Example 1: <span class="fas fa-map-marker-alt text-muted mrgn-rght-sm"></span>Calculation for <strong>2024 [federal and provincial] tax</strong> on taxable income in the <strong>first bracket</strong></summary>
+    <p><strong>Example:</strong></p>
+    <p>Giovanni's taxable income was $45,000. He was living in British Columbia on December 31, 2024. [adjust example to show federal and provincial calculation. Remove brackets 2 to 5, just keep the bracket applicable to the example]</p>	
 
 	 
 <table class="table table-condensed">
@@ -1179,10 +1181,11 @@
 	<p>Giovanni's total provincial tax is $2,277. He can <a href="#toc4">apply credits and additional deductions to lower this amount</a>.</p>
 	 <p>Giovanni still needs to calculate his federal tax as well.</p>
   </details>
+	  
   <details>
-    <summary>Example 2: <span class="fab fa-canadian-maple-leaf text-danger mrgn-rght-sm"></span>Calculation for <strong>2024 federal tax</strong> on taxable income in the <strong>third bracket</strong></summary>
+    <summary>Example 2: <span class="fab fa-canadian-maple-leaf text-danger mrgn-rght-sm"></span>Calculation for <strong>2024 [federal and provincial] tax</strong> on taxable income in the <strong>third bracket</strong></summary>
    <p><strong>Example:</strong></p>
-	  <p>Maria's taxable income was $115,000.</p>
+	  <p>Maria's taxable income was $115,000. [adjust example to show federal and provincial calculation. Remove brackets 2 to 5, just keep the bracket applicable to the example] </p>
 <table class="table table-condensed">
 <caption>Federal income tax rates for 2024</caption>
 	<thead>
