--- a/T1/send-return.html
+++ b/T1/send-return.html
@@ -288,9 +288,10 @@ Send us your tax return</h1>
 
 <h2 class="h3">On this page</h2>
   <ul>
-    <li><a href="h-1">Online</a></li>
-    <li><a href="h-2">By mail</a></li>  
-    <li><a href="h-3">With another free service</a></li>
+    <li><a href="h-toc1">Online</a></li>
+    <li><a href="h-toc2">By mail</a></li>  
+    <li><a href="h-toc3">With SimpleFile</a></li>
+    <li><a href="h-toc4">Free tax clinic</a></li>
   </ul>
           
 <h2>Online</h2>
@@ -336,31 +337,18 @@ Send us your tax return</h1>
 
 
 
-<h2>With another free service</h2>
-  <p>If you have a modest income and a simple tax situation, you may be eligible for help at a free tax clinic or receive an invitation to use the SimpleFile service.</p>
+<h2>With SimpleFile</h2>
+  <p>You may receive an invitation to use the SimpleFile service if you have a modest income and a simple tax situation.</p>
 
-<dl class="dl-horizontal mrgn-tp-lg">
-<dt>Free tax clinic</dt> 
-    <dd><p>You or your authorized service provider can use this secure CRA service to automatically fill in parts of your tax return for the current tax year.</p>
-    <p>Your tax information from tax slips, like your T4s, registered retirement savings information and carry forward amounts, will be used to auto-fill your tax return.</p>
-    <p>To use Auto-fill my return, you must:</p>
-      <ul>
-      <li>have a CRA <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html"><span class="nowrap">My Account</span></a></li>
-      <li>use certified tax software that includes the <span class="nowrap">Auto-fill</span> my return option</li>
-      </ul>
-    <p>For details: <a href="https://www.canada.ca/en/revenue-agency/services/e-services/about-auto-fill-return.html">Auto-fill my return</a></p>
-    </dd> 
-  <dt>SimpleFile</dt> 
-    <dd><p>You or your authorized service provider can use this secure CRA service to automatically fill in parts of your tax return for the current tax year.</p>
-    <p>Your tax information from tax slips, like your T4s, registered retirement savings information and carry forward amounts, will be used to auto-fill your tax return.</p>
-    <p>To use Auto-fill my return, you must:</p>
-      <ul>
-      <li>have a CRA <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html"><span class="nowrap">My Account</span></a></li>
-      <li>use certified tax software that includes the <span class="nowrap">Auto-fill</span> my return option</li>
-      </ul>
-    <p>For details: <a href="https://www.canada.ca/en/revenue-agency/services/e-services/about-auto-fill-return.html">Auto-fill my return</a></p>
-    </dd> 
-</dl>
+
+<h2>Free tax clinic</h2> 
+    <p>If you have a modest income and a simple tax situation, you may be eligible to get your tax returns done online for free by a volunteer at a free tax clinic. </p>
+	 <details><summary>Check if you are eligible for free tax help</summary>
+		 <p>ajax content under x/h Eligibility criteria in page <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/community-volunteer-income-tax-program/lend-a-hand-individuals/about.html">About free tax clinics</a> </p>
+	 </details>
+    <p><a href="https://apps.cra-arc.gc.ca/ebci/oecv/external/prot/cli_srch_01_ld.action">Find a tax clinic</a></p>
+      
+
 	
 </div>
 
