--- a/digital-by-default/Online-mail-for-business-v2.html
+++ b/digital-by-default/Online-mail-for-business-v2.html
@@ -1,4 +1,4 @@
-<!doctype html>
+view <!doctype html>
 
 
 <html class="no-js" dir="ltr" lang="en" xmlns="http://www.w3.org/1999/xhtml">
@@ -235,7 +235,7 @@
 <li><a href='/en/revenue-agency.html'>Canada Revenue Agency (CRA)</a></li>
 <li><a href='/en/revenue-agency/services/e-services/cra-login-services.html'>CRA sign-in services</a></li>
 <li><a href='/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html'>My Business Account</a></li>
-<li><a href='/en/revenue-agency/services/e-services/digital-services-businesses/business-account/about-business-account.html>About My Business Account</a></li>
+<li><a href='/en/revenue-agency/services/e-services/digital-services-businesses/business-account/about-business-account.html'>About My Business Account</a></li>
 </ol></div></nav>
 
 
@@ -277,7 +277,7 @@
 <!-- <h2 class="h3">On this page</h2>
 
 <ul>
-    <li><a href="#hlp1">Business correspondence</a> </li>
+    <li><a href="#hlp1">Where to view business correspondence online</a> </li>
     <li><a href="#hlp2">How to prepare for this change</a> </li>
     <li><a href="#hlp3">Exceptions</a> </li>
     <li><a href="#hlp4">Requesting paper mail</a> </li>
