--- a/digital-by-default/Online-mail-for-business-v2.html
+++ b/digital-by-default/Online-mail-for-business-v2.html
@@ -363,7 +363,7 @@ view <!doctype html>
               
 <h3>New business number and CRA program account registrations</h3>
 <p>Businesses registering for a new business number or a CRA program account will need to register for My Business Account and provide a valid email address if they haven’t already done so to receive notifications and access account updates and correspondence.</p>
-<p><a href='https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/register-cra-sign-in-services.html?account=mba'>Register for My Business Account</p>
+<p><a href='https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/register-cra-sign-in-services.html?account=mba'>Register for My Business Account</a></p>
 
 <h2 id="hlp3">Exceptions</h2>
   <h3>Existing businesses not registered for My Business Account</h3>
