--- a/digital-by-default/Online-mail-for-business-v2.html
+++ b/digital-by-default/Online-mail-for-business-v2.html
@@ -7,15 +7,15 @@ view <!doctype html>
     
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta charset="utf-8"/>
-<title>Online mail for business – CRA sign-in services help - Canada.ca</title>
+<title>Online mail for business - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/help-cra-sign-in-services/Online-mail-for-business.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/help-cra-sign-in-services/Online-mail-for-business.html"/>
+	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/Online-mail-for-business.html"/>
+    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/Online-mail-for-business.html"/>
 	
-        <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/services-electroniques/services-ouverture-session-arc/aide-services-ouverture-session-arc/Courrier-en ligne-pour-les-entreprises.html"/>
+        <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/services-electroniques/services-ouverture-session-arc/Courrier-en ligne-pour-les-entreprises.html"/>
 	
 	
 		<meta name="description" content="How to transition to online mail and start receiving most of your business notices and other correspondence through CRA’s secure online portal. "/>
@@ -269,8 +269,11 @@ view <!doctype html>
 
 
 
-    <p class="lead mrgn-tp-md mrgn-bttm-0" aria-hidden="true">CRA sign-in services help</p>
-<h1 class="mrgn-tp-0" id="wb-cont"><span class="wb-inv">CRA sign-in services help - </span>Online mail for business</h1>
+    <!-- <p class="lead mrgn-tp-md mrgn-bttm-0" aria-hidden="true">CRA sign-in services help</p>
+<h1 class="mrgn-tp-0" id="wb-cont"><span class="wb-inv">CRA sign-in services help - </span>Online mail for business</h1> -->
+
+<h1 property="name" id="wb-cont" dir="ltr">
+Online mail for business</h1>
 
 <p>Starting spring 2025, the Canada Revenue Agency (CRA) will transition to online mail as the default method of delivering most business correspondence. This means you’ll start receiving most of your business notices and other correspondence through CRA’s secure online portal, My Business Account, instead of in the mail.</p>
 
