--- a/digital-by-default/Online-mail-for-business-v2.html
+++ b/digital-by-default/Online-mail-for-business-v2.html
@@ -329,7 +329,7 @@ Online mail for business</h1>
 <h2 id="hlp2">How to prepare for this change </h2>
   <h3>Accessing My Business Account </h3>
     <p>To prepare for the change to online mail, the CRA recommends signing in to your My Business Account to <strong>ensure you have access</strong> to all your business numbers and the ability to view your business correspondence.</p>
-    <p>If you are not registered for My Business Account and would like to take advantage of the benefits of the CRA’s digital services, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account</a>.</p>
+    <p>If you are not registered for My Business Account and would like to take advantage of the benefits of the CRA’s digital services, go to <a href='https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/register-cra-sign-in-services.html?account=mba'>Register for My Business Account</a>.</p>
     <p>For more information on the CRA’s digital services, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services.html">Digital services</a>.</p>
 
   <h3>Email notifications </h3>
