--- a/T1/t1-secure-services.html
+++ b/T1/t1-secure-services.html
@@ -7,7 +7,7 @@
     
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta charset="utf-8"/>
-<title>Payments to the CRA - Canada.ca</title>
+<title>CRA online secure services - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 
 
@@ -309,66 +309,61 @@
       <div class="wb-eqht row">
         <div class="col-lg-4 col-md-6">
           <section>
-            <h3><a href="https://www.canada.ca/en/revenue-agency.html">tbd</a></h3>
-            <p>How to make a full or partial payment to the CRA online, by mail, or in person</p>
+            <h3><a href="https://www.canada.ca/en/revenue-agency.html">NETFILE</a></h3>
+            <p>Learn more about NETFILE, CRA's web filing service that lets individuals send their return electronically through a certified tax software</p>
           </section>
         </div>
         <div class="col-lg-4 col-md-6">
           <section>
-            <h3><a href="https://www.canada.ca/en/revenue-agency.html">tbd</a></h3>
-            <p>Deadlines for paying your personal and business taxes and remittances, including instalments and balance due</p>
+            <h3><a href="https://www.canada.ca/en/revenue-agency.html">EFILE</a></h3>
+            <p>Learn more about EFILE, CRA's web filing service that allows approved tax preparers and discounters to send individual and business tax returns electronically</p>
           </section>
         </div>
         <div class="col-lg-4 col-md-6">
           <section>
-            <h3><a href="https://www.canada.ca/en/revenue-agency.html">tbd</a></h3>
-            <p>Check what you owe, confirm a payment was sent or received, what to do if your payment was not applied correctly</p>
+            <h3><a href="https://www.canada.ca/en/revenue-agency.html">Auto-fill my return</a></h3>
+            <p>add text</p>
           </section>
         </div>
 
         <div class="col-lg-4 col-md-6">
           <section>
-            <h3><a href="https://www.canada.ca/en/revenue-agency.html">tbd</a></h3>
-            <p>Set up a payment arrangement with the CRA and calculate a regular payment amount you can afford</p>
+            <h3><a href="https://www.canada.ca/en/revenue-agency.html">SimpleFile services</a></h3>
+            <p>add text</p>
           </section>
         </div>
         <div class="col-lg-4 col-md-6">
           <section>
-            <h3><a href="https://www.canada.ca/en/revenue-agency.html">tbd</a></h3>
-            <p>Talk to us about deferring a payment to a later date, making a payment arrangement and other options</p>
+            <h3><a href="https://www.canada.ca/en/revenue-agency.html">Change my return (CMR)</a></h3>
+            <p>add text</p>
           </section>
         </div>
         <div class="col-lg-4 col-md-6">
           <section>
-            <h3><a href="https://www.canada.ca/en/revenue-agency.html">tbd</a></h3>
-            <p>How we contact you, penalties and interest, consequences of not paying, how we may collect your debt</p>
+            <h3><a href="https://www.canada.ca/en/revenue-agency.html">ReFILE</a></h3>
+            <p>Learn more about ReFILE, CRA's web filing service that lets you change your tax return online using a certified tax software</p>
           </section>
         </div>
 
         <div class="col-lg-4 col-md-6">
           <section>
-            <h3><a href="https://www.canada.ca/en/revenue-agency.html">tbd</a></h3>
-            <p>Options for relief if you disagree with a debt or can't pay due to extraordinary circumstances</p>
+            <h3><a href="https://www.canada.ca/en/revenue-agency.html">Express notice of assessment (NOA)</a></h3>
+            <p>add text</p>
           </section>
         </div>
         <div class="col-lg-4 col-md-6">
           <section>
-            <h3><a href="https://www.canada.ca/en/revenue-agency.html">tbd</a></h3>
-            <p>Find out when you have to make advance instalment payments and how to calculate the amount</p>
+            <h3><a href="https://www.canada.ca/en/revenue-agency.html">NETFILE access code</a></h3>
+            <p>How to get your NETFILE access code (NAC) to make make validating your identity over the phone easier</p>
           </section>
         </div>
         <div class="col-lg-4 col-md-6">
           <section>
-            <h3><a href="https://www.canada.ca/en/revenue-agency.html">tbd</a></h3>
-            <p>When you may be charged interest and penalties on late or incorrect payments to the CRA</p>
+            <h3><a href="https://www.canada.ca/en/revenue-agency.html">NETFILE-certified tax software</a></h3>
+            <p>add text</p>
           </section>
         </div>
-        <div class="col-lg-4 col-md-6">
-          <section>
-            <h3><a href="https://www.canada.ca/en/revenue-agency.html">tbd</a></h3>
-            <p>Why you may need to return a payment, how to repay, and how it impacts your taxes</p>
-          </section>
-        </div>
+        
       </div>
 
     </section>
