--- a/T1/t1-secure-services.html
+++ b/T1/t1-secure-services.html
@@ -282,7 +282,7 @@
 
     <div class="container">
   <div aria-hidden="true">
-    <h1 property="name" id="wb-cont" class="provisional gc-thickline">Help with CRA online secure services</h1>
+    <h1 property="name" id="wb-cont" class="provisional gc-thickline">CRA online secure services to file and change your tax return</h1>
   </div>
 
   <section data-ajax-replace="https://www.canada.ca/content/dam/cra-arc/includes/generic_disruption.txt#disruption-en"></section>
@@ -294,7 +294,7 @@
       <div class="col-md-8">
         <h2 class="h4 mrgn-tp-md">Services availability</h2>
         <ul class="fa-ul small">
-          <li><strong>Hours of service</strong>: The services are available 21 hours a day, from 6 a.m. to 3 a.m. Due to daily maintenance activities, the services are not available for three hours a day.</li>
+          <li><strong>Hours of service</strong>: The services are available 21 hours a day. Services are not available from 3 a.m. to 6 a.m. for daily maintenance activities.</li>
           <li><strong>NETFILE and ReFILE</strong>: Open for electronic filing from <strong>February 19, 2024</strong> at 6:00 a.m. (Eastern time), until <strong>January 31, 2025</strong>.</li>
         </ul>
       </div>
