--- a/T1/t1-secure-services.html
+++ b/T1/t1-secure-services.html
@@ -293,9 +293,9 @@
     <div class="container brdr-tp brdr-bttm">
       <div class="col-md-8">
         <h2 class="h4 mrgn-tp-md">Services availability</h2>
-        <ul class="fa-ul small">
-          <li><strong>Hours of service</strong>: The services are available 21 hours a day. Services are not available from 3 a.m. to 6 a.m. for daily maintenance activities.</li>
+        <ul class="fa-ul small">        
           <li><strong>NETFILE and ReFILE</strong>: Open for electronic filing from <strong>February 19, 2024</strong> at 6:00 a.m. (Eastern time), until <strong>January 31, 2025</strong>.</li>
+	  <li><strong>Hours of service</strong>: The services are available 21 hours a day. Services are not available from 3 a.m. to 6 a.m. for daily maintenance activities.</li>
         </ul>
       </div>
     </div>
@@ -305,6 +305,8 @@
 
 
     <section class="gc-srvinfo col-md-12">
+     <h2 class="mrgn-tp-0 mrgn-bttm-0">CRA web filing services</h2>
+     <h2 class="mrgn-bttm-0">Secure CRA services available when using a certified softweare</h2>
 
       <div class="wb-eqht row">
         <div class="col-lg-4 col-md-6">
@@ -335,7 +337,7 @@
         <div class="col-lg-4 col-md-6">
           <section>
             <h3><a href="https://www.canada.ca/en/revenue-agency.html">Change my return (CMR)</a></h3>
-            <p>add text</p>
+            <p>Learn more about changing your return in My Accouhnt</p>
           </section>
         </div>
         <div class="col-lg-4 col-md-6">
