--- a/SSI/help-welcome.html
+++ b/SSI/help-welcome.html
@@ -243,7 +243,9 @@
           <li>Click the panel for the account you want.</li>
           <li>You’ll go directly to the account’s overview page.</li>
         </ol>
-      <p>To switch between your business accounts, use the menu in the top left corner of your default business account overview.</p>
+
+	<p></p>
+	<p>To switch between your business accounts, use the menu in the top left corner of your default business account overview.</p>
 
     <h2>Features of the Welcome page</h2>
       <ul>
@@ -258,12 +260,13 @@
       
       <h3>CRA security options</h3>
       <p>This option is only be available if you signed in with a CRA user ID and password. After selecting <strong>Continue</strong>, you will go to a page that gives instructions on how to “Manage your CRA security options”. </p>
-      <p> To manage your CRA security options:</p>
+	    <p></p>
+	 <p> To manage your CRA security options:</p>
         <ol class="">
           <li>Exit the portal</li>
           <li>Sign in again with your CRA user ID and password</li>
           <li>After answering the security question, select the button <strong>Manage CRA security options</strong> from the “CRA sign in and security options” page.</li>          
-        </ol>, you must exit the portal and then sign in again. 
+        </ol> 
 
       <p><strong>Available Options:</strong></p>
       <ul>
@@ -307,7 +310,7 @@
       <p>When you sign in, you can choose between the following option to get your one-time passcode: </p>
         <ul>
           <li>Get a text on your cell</li>
-          <li></li>Get a call on your landline</li>
+          <li>Get a call on your landline</li>
           <li>Provide information from your passcode grid</li>
           <li>Use the authenticator app</li>       
         </ul>
